Prevent flickering of images when served from cache

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -38,5 +38,9 @@ h1, h2, h3, h4, h5, h6
     font-weight: normal
 
 
-\:global .turbolinks-progress-bar
-    background-color: $light-blue
+\:global
+    .turbolinks-progress-bar
+        background-color: $light-blue
+
+    [data-turbolinks-preview] img[src$=".jpg"]
+        visibility: hidden
